<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    tools:context=".ui.movie.MovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_root"
        android:layout_marginRight="@dimen/margin_root"
        android:layout_marginTop="@dimen/margin_root"
        tools:listitem="@layout/items_movie" />
</FrameLayout>